applications/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: argocd.oakdew.biz
    external-dns.alpha.kubernetes.io/target: 5b48a9ee-7653-461a-bb27-d477fcd388cb.cfargotunnel.com
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.oakdew.biz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
